--- a/2dVolumetricLighting.vcxproj
+++ b/2dVolumetricLighting.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -126,18 +126,6 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
     </CustomBuild>
-    <CustomBuild Include="Render\Shaders\ShadowMap1d.fsh">
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
-    </CustomBuild>
     <CustomBuild Include="Render\Shaders\Simple.fsh">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
@@ -224,18 +212,6 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
     </CustomBuild>
-    <CustomBuild Include="Render\Shaders\ShadowMap1d.vsh">
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
-    </CustomBuild>
     <CustomBuild Include="Render\Shaders\Simple.vsh">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
@@ -249,6 +225,58 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
     </CustomBuild>
     <CustomBuild Include="Render\Shaders\SimpleTransparent.vsh">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="Render\Shaders\ShadowMap1dConical.fsh">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>	
+    </CustomBuild>
+    <CustomBuild Include="Render\Shaders\ShadowMap1dPoint.fsh">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="Render\Shaders\ShadowMap1dConical.vsh">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>	
+    </CustomBuild>
+    <CustomBuild Include="Render\Shaders\ShadowMap1dPoint.vsh">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
