--- a/2dVolumetricLighting.vcxproj
+++ b/2dVolumetricLighting.vcxproj
@@ -379,7 +379,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_DEBUG;_CONSOLE;WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)WindowsExternal\include;$(SolutionDir)External\include;$(SolutionDir);%(AdditionalIncludeDirectories);$(SolutionDir)External\include\imgui</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)WindowsExternal\include;$(SolutionDir)External;$(SolutionDir)External\include;$(SolutionDir);%(AdditionalIncludeDirectories);$(SolutionDir)External\include\imgui</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -396,7 +396,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;NDEBUG;_CONSOLE;WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)WindowsExternal\include;$(SolutionDir)External\include;$(SolutionDir);%(AdditionalIncludeDirectories);$(SolutionDir)External\include\imgui</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)WindowsExternal\include;$(SolutionDir)External;$(SolutionDir)External\include;$(SolutionDir);%(AdditionalIncludeDirectories);$(SolutionDir)External\include\imgui</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
