--- a/2dVolumetricLighting.vcxproj
+++ b/2dVolumetricLighting.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -24,12 +24,12 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Render\Asset.cpp" />
     <ClCompile Include="Render\Material.cpp" />
+    <ClCompile Include="Render\Model.cpp" />
     <ClCompile Include="Render\PostEffect.cpp" />
     <ClCompile Include="Render\Render.cpp" />
     <ClCompile Include="Render\Shader.cpp" />
     <ClCompile Include="Render\Texture.cpp" />
     <ClCompile Include="Render\WindowsGL.cpp" />
-    <ClCompile Include="Tool\RMath.cpp" />
     <ClCompile Include="Tool\Test.cpp" />
     <ClCompile Include="Tool\Utils.cpp" />
     <ClCompile Include="External\src\imgui\imgui.cpp" />
@@ -62,6 +62,19 @@
     <ClInclude Include="Tool\Utils.h" />
   </ItemGroup>
   <ItemGroup>
+      <CustomBuild Include="Render\Shaders\LitWaveFront2.fsh">
+	  <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+	  <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+	  <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+	  <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+	  <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+	  <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+	  <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+	  <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+	  <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
+	  <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
+      </CustomBuild>
+      
     <CustomBuild Include="Render\Shaders\BlurX.fsh">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
@@ -148,7 +161,19 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="Render\Shaders\BlurX.vsh">
+      <CustomBuild Include="Render\Shaders\LitWaveFront2.vsh">
+	  <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+	  <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+	  <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
+	  <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
+	  <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+	  <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)obj\Shader\%(Filename)%(Extension)</Outputs>
+	  <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+	  <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)Render\Shaders\light.h;$(ProjectDir)Render\Shaders\shader.h</AdditionalInputs>
+	  <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
+	  <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
+      </CustomBuild>
+      <CustomBuild Include="Render\Shaders\BlurX.vsh">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing %(Filename)%(Extension) =&gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(MCppToolPath) -a %(FullPath) &gt; $(ProjectDir)obj\Shader\%(Filename)%(Extension)</Command>
